--- a/src/fractal2d/view/fileSelect.fxml
+++ b/src/fractal2d/view/fileSelect.fxml
@@ -2,7 +2,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
-<TitledPane fx:id="fileTab" text="File" xmlns:fx="http://javafx.com/fxml/" fx:controller="fractal2d.controller.FileSelectController">
+<TitledPane fx:id="fileTab" text="File" xmlns:fx="http://javafx.com/fxml/" fx:controller="fractal2d.controller.FileSelectController" animated="true">
     <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
             <children>
