--- a/src/fractal2d/view/fractal2d.fxml
+++ b/src/fractal2d/view/fractal2d.fxml
@@ -6,7 +6,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fractal2d.controller.MainController">
     <children>
-        <Accordion layoutY="178.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns:fx="http://javafx.com/fxml">
+        <Accordion fx:id="menuAccordion" layoutY="178.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" xmlns:fx="http://javafx.com/fxml">
             <panes>
                 <fx:include fx:id="interactive" source="interactive.fxml"></fx:include>
                 <fx:include fx:id="fileSelect" source="fileSelect.fxml"></fx:include>
