--- a/src/fractal2d/view/fileSelect.fxml
+++ b/src/fractal2d/view/fileSelect.fxml
@@ -6,8 +6,8 @@
     <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
             <children>
-                <Button layoutX="137.0" layoutY="51.0" mnemonicParsing="false" text="Load" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="41.0" />
-                <TextField editable="false" layoutX="0.097564697265625" layoutY="14.0" promptText="Click To Choose File" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
+                <Button onAction="#openFileDialog" layoutX="137.0" layoutY="51.0" mnemonicParsing="false" text="Choose File" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="41.0" />
+                <TextField fx:id="fileSelectTextField" editable="true" layoutX="0.097564697265625" layoutY="14.0" promptText="Click To Choose File" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
             </children>
         </AnchorPane>
     </content>
