--- a/src/fractal2d/view/fileSelect.fxml
+++ b/src/fractal2d/view/fileSelect.fxml
@@ -1,13 +1,17 @@
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
-<TitledPane fx:id="fileTab" text="File" xmlns:fx="http://javafx.com/fxml/" fx:controller="fractal2d.controller.FileSelectController" animated="true">
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.*?>
+<TitledPane fx:id="fileTab" text="File" xmlns:fx="http://javafx.com/fxml/"
+            fx:controller="fractal2d.controller.FileSelectController" animated="true">
     <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
             <children>
-                <Button onAction="#openFileDialog" layoutX="137.0" layoutY="51.0" mnemonicParsing="false" text="Choose File" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="41.0" />
-                <TextField fx:id="fileSelectTextField" editable="true" layoutX="0.097564697265625" layoutY="14.0" promptText="Enter a path or click the 'Choose File'-button" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0" />
+                <Button onAction="#openFileDialog" layoutX="137.0" layoutY="51.0" mnemonicParsing="false"
+                        text="Choose File" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="41.0"/>
+                <TextField fx:id="fileSelectTextField" editable="true" layoutX="0.097564697265625" layoutY="14.0"
+                           promptText="Enter a path or click the 'Choose File'-button" AnchorPane.leftAnchor="5.0"
+                           AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0"/>
             </children>
         </AnchorPane>
     </content>
