--- a/src/fractal2d/view/settings.fxml
+++ b/src/fractal2d/view/settings.fxml
@@ -1,7 +1,8 @@
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
-<TitledPane fx:id="settingsTab" text="Settings" xmlns:fx="http://javafx.com/fxml/"  fx:controller="fractal2d.controller.SettingsController" animated="true">
+<TitledPane fx:id="settingsTab" text="Settings" xmlns:fx="http://javafx.com/fxml/"
+            fx:controller="fractal2d.controller.SettingsController" animated="true">
     <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0"/>
     </content>
 </TitledPane>
